<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintFirstName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintLastName"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/spinnerSchool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/schools" />

    <Button
        android:id="@+id/buttonAddStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAddStudent" />

    <ListView
        android:id="@+id/lvStudents"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>
